fix grid layout issue in home page

--- a/src/styles/_home.sass
+++ b/src/styles/_home.sass
@@ -34,7 +34,6 @@ body
 
     #home-favourite-vendor-stories-container
         display: grid
-        grid-template-columns: repeat(auto-fill, 40px)
         grid-auto-flow: column
         gap: 25px
         overflow: auto
